responsive version inside

--- a/final/public/index.html
+++ b/final/public/index.html
@@ -21,7 +21,7 @@
         <div class="w-auto">
             <div class="flex items-center">
                 <div class="w-auto"><a href=""><img class="w-16" src="./images/logo.svg" alt=""></a></div>
-                <div class="w-auto">
+                <div class="hidden sm:block w-auto">
                     <span class="font-bold text-green-700">SNA</span><span class="text-green-700">club</span>
                 </div>
             </div>
